Fix issue with background visible under footer.

--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -15,6 +15,7 @@
     position: sticky;
     width: 100%;
     background-color: #383838;
+    padding-bottom: 10px;
 }
 
 .flexContainer {
